# face-recognize

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
scripts/: verify_build.py  verify_documentation.py  verify_model_download.py
src/face_recognize/: __init__.py  config.py
src/face_recognize/cli/: __init__.py  commands.py  main.py
src/face_recognize/core/: __init__.py  camera.py  detector.py  logger.py  models.py  tracker.py  utils.py
src/face_recognize/database/: __init__.py  base.py  json_backend.py
src/face_recognize/services/: __init__.py  identification.py
src/face_recognize/visualization/: __init__.py  renderer.py
tests/: test_bounding_box.py  test_camera.py  test_config_defaults.py  test_detector_error_handling.py  test_error_handling.py  test_face.py  test_face_detection.py  test_face_detection_functionality.py  test_identification.py  test_integration.py  test_json_database.py  test_performance_benchmark.py  test_performance_verification.py  test_person_record.py  test_tracker.py  test_utils.py
